--- a/layout/menhely.css
+++ b/layout/menhely.css
@@ -1,7 +1,56 @@
 body{
-    background-color: rgba(0, 0, 0, 0.1); 
+    background-color: rgba(10, 100, 2, 0.6); 
 }
 .navbar-nav .nav-link.active{
     background-color: black;
     color: yellow;
+}
+
+.btn {
+    background-color: rgba(0,0,0,0.6);
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+nav ul{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border:1px solid gray;
+    background:rgba(0,0,0,0.2);
+}
+
+nav, .logo{
+    flex: 1;
+}
+
+.toggleNav {
+    display: none;
+}
+
+.navbar {
+    background-color: rgba(255,0,0,0.6); /* Háttérszín */
+    border-bottom: 5px solid rgba(255,0,0,0.6); /* Alsó határ */
+    border-radius: 12px;
+}
+
+.navbar-brand {
+    color: rgba(1,200,0,0.6) !important; /* Cím szín */
+    font-weight: bold; /* Betű vastagság */
+    border-radius: 12px;
+    text-align: center;
+}
+
+.navbar-nav .nav-link .gomb1{
+    /*color: wheat; /* Menüpont szövegszín */
+    font-weight: bold; /* Betű vastagság */
+    border-radius: 12px;
+}
+
+.navbar-nav .nav-link:hover {
+    /*color: black; /* Hover állapot szövegszín */
+    border-radius: 12px;
 }
